--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,6 +18,7 @@ EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
+DEFAULT_FROM_EMAIL=Riderspool <noreply@riderspool.com>
 
 # SMS Configuration (Africa's Talking or other provider)
 SMS_API_KEY=your-sms-api-key
