--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "vercel": "^48.11.1",
     "vite": "npm:rolldown-vite@7.2.2"
   },
   "overrides": {
